md-docs/smartwebsecurity/cli-ref/v0/index.md
[Документация Yandex Cloud](../../../index.md) > [Yandex Smart Web Security](../../index.md) > [Справочник CLI (англ.)](../index.md) > v0 > Overview

# yc smartwebsecurity v0

Manage SmartWebSecurity resources

#### Command Usage

Syntax:

`yc smartwebsecurity v0 <group>`

#### Command Tree

- [yc smartwebsecurity v0 security-profile](security-profile/index.md) — Manage security profiles

  - [yc smartwebsecurity v0 security-profile create](security-profile/create.md) — Create a security profile

  - [yc smartwebsecurity v0 security-profile delete](security-profile/delete.md) — Delete the specified security profile

  - [yc smartwebsecurity v0 security-profile get](security-profile/get.md) — Show information about the specified security profile

  - [yc smartwebsecurity v0 security-profile list](security-profile/list.md) — List security profiles

  - [yc smartwebsecurity v0 security-profile update](security-profile/update.md) — Update the specified security profile

#### Global Flags

#|
||Flag | Description ||
|| `--profile` | `string`

Set the custom profile. ||
|| `--region` | `string`

Set the region. ||
|| `--cloud-id` | `string`

Set the ID of the cloud to use. ||
|| `--folder-id` | `string`

Set the ID of the folder to use. ||
|| `--folder-name` | `string`

Set the name of the folder to use (will be resolved to id). ||
|| `--debug` | Debug logging. ||
|| `--debug-grpc` | Debug gRPC logging. Very verbose, used for debugging connection problems. ||
|| `--no-user-output` | Disable printing user intended output to stderr. ||
|| `--pager` | `string`

Set the custom pager. ||
|| `--no-pager` | Do not pipe help output through a pager. ||
|| `--format` | `string`

Set the output format: text (default), yaml, json, json-rest. ||
|| `--retry` | `int`

Enable gRPC retries. By default, retries are enabled with maximum 5 attempts.
Pass 0 to disable retries. Pass any negative value for infinite retries.
Even infinite retries are capped with 2 minutes timeout. ||
|| `--timeout` | `string`

Set the timeout. ||
|| `--token` | `string`

Set the OAuth token to use. ||
|| `--jq` | `string`

Query to select values from the response using jq syntax ||
|| `--endpoint` | `string`

Set the Cloud API endpoint (host:port). ||
|| `--impersonate-service-account-id` | `string`

Set the ID of the service account to impersonate. ||
|| `--no-browser` | Disable opening browser for authentication. ||
|| `--query` | `string`

Query to select values from the response using jq syntax ||
|| `--print-metadata` | Print operation metadata along with result. ||
|| `--syntax` | `string`

Choose syntax option. ||
|| `--cli-auto-prompt` | `string[="on"]`

Enable interactive auto-prompt mode. Values: on, partial, off. Bare --cli-auto-prompt is equivalent to --cli-auto-prompt=on. ||
|| `--no-cli-auto-prompt` | Disable interactive auto-prompt mode (overrides --cli-auto-prompt, env and profile). ||
|| `-h`, `--help` | Display help for the command. ||
|#